--- a/modulo2/css-labetube/style.css
+++ b/modulo2/css-labetube/style.css
@@ -57,6 +57,8 @@ main .video-link video {
 
 /* RODAPÉ */
 footer {
+   position: fixed;
+   bottom: 0;
    height: 60px;
    background: black;
    display: flex;
@@ -71,3 +73,20 @@ p{
 h2{
    color: rgb(0, 89, 255);
 }
+
+
+@media screen and (max-device-width: 400px){
+main {
+   display: flex;
+   flex-direction: column;
+}
+footer {
+   height: 60px;
+   background: black;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   grid-column: 1/-1;
+}
+}
+
